Conflicts with v1 patch;

--- a/assets/css/competition.css
+++ b/assets/css/competition.css
@@ -2,7 +2,7 @@
   display: none !important;
 }
 
-.header-color .logo img {
+body:not(.navbar-resize) .header-color .logo img {
   padding-top: 17px;
   padding-bottom: 17px;
   display: inline-block;
